--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.5",
     "@wizdm/animate": "^2.0.1",
     "bootstrap": "^4.5.2",
+    "ng-spy": "^2.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
