--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@wizdm/animate": "^2.0.1",
-    "bootstrap-grid-only": "^1.0.0",
+    "bootstrap": "^4.5.2",
     "ng-spy": "^2.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
