--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@wizdm/animate": "^2.0.1",
     "bootstrap": "^4.5.2",
     "ng-spy": "^2.0.3",
+    "ngx-lightbox": "^2.2.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
